Added transactional outbox support
